--- a/src/scss/blocks/game.scss
+++ b/src/scss/blocks/game.scss
@@ -2,13 +2,14 @@
   display: grid;
   border-radius: 10px;
 
-  @media (min-width: 660px) { grid-template-columns: 1fr 200px; }
-  @media (min-width: 992px) { grid-template-columns: 1fr 250px; }
+  @media (min-width: 660px) { grid-template-columns: 200px 1fr; }
+  @media (min-width: 992px) { grid-template-columns: 250px 1fr; }
 }
 
 .game__board {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  align-items: center;
   gap: 10px;
   margin-top: 135px;
   padding: 10px;
@@ -23,7 +24,7 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     margin-top: 0;
     padding: 20px;
-    border-radius: 10px 0 0 10px;
+    border-radius: 0 10px 10px 0;
   }
 }
 
@@ -49,9 +50,7 @@
     }
   }
 
-  @media (min-width: 660px) {
-    height: 125px;
-  }
+  @media (min-width: 660px) { height: 125px; }
 }
 
 .game__card-icon {
@@ -75,20 +74,26 @@
   top: 0;
   left: 0;
 
-  @media (max-width: 659px) {
-    p { margin-bottom: 0; }
-  }
   @media (min-width: 660px) {
     flex-direction: column;
+    gap: 10px;
     max-height: calc(100vh - 40px);
     padding: 20px;
     border: 2px solid #b3b3b3;
-    border-left: none;
-    border-radius: 0 10px 10px 0;
+    border-right: none;
+    border-radius: 10px 0 0 10px;
     box-shadow: none;
     position: sticky;
     top: 20px;
+
+    .game__setting-text--hide { display: inline-block; }
   }
+}
+
+.game__setting-text {
+  margin-bottom: 0;
+
+  &--hide { display: none; }
 }
 
 .game__difficult-range {
@@ -99,10 +104,16 @@
   @media (min-width: 660px) { 
     flex-grow: 0;
     width: 100%;
-    margin-bottom: 15px; 
   }
 }
 
 .game__start-button {
   margin-top: auto;
+}
+
+.game__resize-range {
+  display: none;
+  width: 100%;
+
+  @media (min-width: 660px) { display: block; }
 }
