--- a/src/scss/common/global.scss
+++ b/src/scss/common/global.scss
@@ -2,6 +2,7 @@ body {
   color: #333;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  min-width: 320px;
 	min-height: 100vh;
   padding: 10px;
   background-color: #f1f1f1;
